--- a/Proyecto_POO1/src/aplicacion/Escuela.form
+++ b/Proyecto_POO1/src/aplicacion/Escuela.form
@@ -75,7 +75,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="tblAlumnos">
+        <Component class="javax.swing.JTable" name="tblCarreras">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
