--- a/ProyectoPOO1/src/main/java/aplicacion/RegistroCursosEnPlan.form
+++ b/ProyectoPOO1/src/main/java/aplicacion/RegistroCursosEnPlan.form
@@ -151,7 +151,7 @@
                               <Component id="cmbCodigoPlanEstudio" min="-2" pref="283" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="btnCargarCursos1" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnCargarPlanes" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="123" max="32767" attributes="0"/>
@@ -170,7 +170,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="cmbCodigoPlanEstudio" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnCargarCursos1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnCargarPlanes" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -308,7 +308,7 @@
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JButton" name="btnCargarCursos1">
+        <Component class="javax.swing.JButton" name="btnCargarPlanes">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="0"/>
@@ -316,7 +316,7 @@
             <Property name="text" type="java.lang.String" value="Cargar Planes"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCargarCursos1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCargarPlanesActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
