--- a/ProyectoPOO1/src/main/java/aplicacion/ConsultaRequisitosCurso.form
+++ b/ProyectoPOO1/src/main/java/aplicacion/ConsultaRequisitosCurso.form
@@ -114,7 +114,7 @@
     </Container>
     <Component class="javax.swing.JButton" name="botonRegresarConsultaRequisito">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Volver"/>
+        <Property name="text" type="java.lang.String" value="Regresar"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonRegresarConsultaRequisitoActionPerformed"/>
